# tux-pdf

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/csv_to_pdf/: main.rs
examples/cvs-to-pdf/: main.rs
examples/hello_world/: main.rs
src/: document.rs  lib.rs  units.rs
src/document/: conformance.rs  meta.rs  resources.rs  types.rs
src/document/resources/: font.rs  icc_profile.rs  layers.rs  xobject.rs
src/document/resources/font/: builtin.rs  emoji_rasterizer.rs  font_type.rs  owned_ttf_parser.rs  static_ttf_parser.rs  ttf_parser.rs
src/document/resources/xobject/: form.rs  pdf_image.rs
src/document/resources/xobject/pdf_image/: utils.rs
src/document/types/: actions.rs  font.rs
src/document/types/font/: cid_fonts.rs  font_descriptor.rs
src/graphics/: color.rs  ctm.rs  group.rs  line.rs  mod.rs  ops.rs  other.rs  position.rs  size.rs  style.rs  text.rs
src/graphics/color/: image.rs  mod.rs
src/graphics/high/: mod.rs  rect.rs
src/graphics/image/: mod.rs
src/graphics/layouts/: mod.rs
src/graphics/layouts/grid/: builder.rs  mod.rs  types.rs
src/graphics/layouts/table/: builder.rs  mod.rs
src/graphics/layouts/taffy_layout/: mod.rs
src/graphics/ops/: keys.rs  mod.rs
src/graphics/primitives/: ctm.rs  line.rs  mod.rs
src/graphics/shapes/: mod.rs  rect.rs
src/graphics/styles/: margin.rs  mod.rs  padding.rs
src/graphics/table/: mod.rs  rows.rs  style.rs
src/graphics/text/: content.rs  group.rs  mod.rs  state.rs  style.rs
src/graphics/text/style/: modifiers.rs
src/layouts/: layout_type.rs  mod.rs
src/layouts/calendar/: mod.rs
src/layouts/calendar/month/: mod.rs  styles.rs
src/layouts/table/: mod.rs  rows.rs  style.rs
src/layouts/table/builder/: builder_internal.rs  mod.rs  types.rs
src/layouts/table_grid/: column.rs  mod.rs  row.rs  style.rs
src/layouts/table_grid/builder/: builder_internal.rs  mod.rs
src/layouts/table_grid/style/: size.rs
src/layouts/taffy_layout/: mod.rs  style_builders.rs
src/page/: mod.rs  page_sizes.rs
src/time_impl/: mod.rs
src/utils/: mod.rs  random.rs
tests/: images.rs  layers.rs  simple.rs  table.rs  test_utils.rs  test_utils_external.rs
tux-pdf-low/: Cargo.toml
tux-pdf-low/src/: document.rs  lib.rs
tux-pdf-low/src/content/: mod.rs
tux-pdf-low/src/document/: xref.rs
tux-pdf-low/src/types/: dictionary.rs  generic_object.rs  mod.rs  object_id.rs  stream.rs
tux-pdf-low/src/types/dictionary/: stream_header.rs  trailer.rs
tux-pdf-low/src/types/string/: mod.rs
tux-pdf-low/src/utils/: mod.rs  write.rs
tux-pdf-low/tests/: test_utils.rs  write_basics.rs
