[package]
name = "tux-pdf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
repository = "https://github.com/wyatt-herkamp/tux-pdf"

[dependencies]
lopdf = { version = "0.34", default-features = false, features = [
    "nom_parser",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ttf-parser = "0.25"
time = { version = "0.3", features = ["local-offset"] }
rand = { version = "0.8" }
strum = { version = "0.26", features = ["derive"] }

resvg = { version = "0.44", default-features = false, optional = true }
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false }
bitflags = "2"
either = "1"
derive_builder = "0.20"
tracing = { version = "0.1" }
derive_more = { version = "1", features = ["from", "into"] }

ahash = "0.8"

taffy = { version = "0.7", optional = true }
[dev-dependencies]
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
image = { version = "0.25", features = ["default-formats"] }
[features]
default = ["svg", "export-taffy", "taffy"]
svg = ["resvg"]
export-taffy = ["taffy"]
