[workspace]
members = ["tux-pdf-low"]
resolver = "3"
[workspace.package]
repository = "https://github.com/wyatt-herkamp/tux-pdf"
license = "MIT OR Apache-2.0"
[workspace.dependencies]
thiserror = "2"
tracing = { version = "0.1" }
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "2", features = ["from", "into"] }

[package]
name = "tux-pdf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
repository = "https://github.com/wyatt-herkamp/tux-pdf"

[dependencies]
tux-pdf-low = { path = "tux-pdf-low" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
ttf-parser = "0.25"
time = { version = "0.3", features = ["local-offset", "formatting"] }
rand = { version = "0.9" }
strum.workspace = true

resvg = { version = "0.44", default-features = false, optional = true }
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false }
bitflags = "2"
either = "1"
derive_builder = "0.20"
tracing.workspace = true
derive_more.workspace = true

ahash = "0.8"

taffy = { version = "0.7", optional = true }
[dev-dependencies]
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
image = { version = "0.25", features = ["default-formats"] }
[features]
default = ["svg", "export-taffy", "taffy"]
svg = ["resvg"]
export-taffy = ["taffy"]
