[package]
name = "tux-pdf-low"
version = "0.1.0"
edition = "2021"

[dependencies]
itoa = "1.0"
ryu = "1.0"
thiserror = "2"
indexmap = "2"
tracing.workspace = true


time = { version = "0.3", features = ["formatting", "parsing"] }
chrono = { version = "0.4", optional = true }

derive_more.workspace = true

flate2 = { version = "1", optional = true }
weezl = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = ["all_compression"]
all_compression = ["flate2", "weezl"]
